map and countdown working

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 						<a href="index.html">
 							<div class="css-logo rounded">
 								<div class="css-logo-text">
-									<strong>G</strong><i class="de-icon-heart-1"></i><strong>D</strong>
+									<strong>A</strong><i class="de-icon-heart-1"></i><strong>A</strong>
 								</div>
 							</div>
 						</a>
@@ -600,7 +600,7 @@
 		<!-- PHOTO DIVIDER -->
 		<section id="photo-divider-1">
 			<div class="image-divider fixed-height"
-				style="background-image:url(images/JPEG/IMG_9635.jpg); height:500px;"
+				style="background-image:url(images/JPEG/IMG_9635.jpg); background-position: 50% 70%; height:500px;"
 				data-stellar-background-ratio="0.3">
 			</div>
 		</section>
@@ -642,15 +642,15 @@
 
 							<div class="row">
 								<div class="col-md-4">
-									<h3>AUGUST / 19TH / 2015</h3>
+									<h3>SATURDAY, OCTOBER 9TH, 2021</h3>
 								</div>
 								<div class="col-md-4">
 									<div class="border-column">
-										<h3>FIVE THIRTY IN THE EVENING</h3>
+										<h3>6:30pm</h3>
 									</div>
 								</div>
 								<div class="col-md-4">
-									<h3>ST. FOXEGAN CHURCH</h3>
+									<h3>BEAR'S NEST TOWNHOUSE</h3>
 								</div>
 
 							</div>
@@ -1105,7 +1105,8 @@
 
 
 		<section id="dont-miss-it">
-			<div class="image-divider auto-height" style="background-image:url(http://placehold.it/1920x1080);"
+			<div class="image-divider auto-height"
+				style="background-image:url(images/clubhouse.png); background-position: 10%"
 				data-stellar-background-ratio="0.3">
 
 				<div class="container">
@@ -2262,7 +2263,7 @@
 	<!-- Owl Carousel -->
 	<script src="js/owlcarousel/owl.carousel.js"></script>
 	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDR13m0eCM5jtZSZ4MXJVwjbpOr2GM7H8E"></script>
 	<script src="js/markerlabel/markerwithlabel.js"></script>
 	<!-- RSVP -->
 	<script src="js/rsvp/rsvp.js"></script>
