--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<li>
 				<!-- SLIDE IMAGE -->
 				<div data-stellar-ratio="0.5" class="slide-image"
-					style="background-image:url(images/JPEG/IMG_9527.jpg); 	background-position:50% 72%">
+					style="background-image:url(images/edited-images/hero.jpg); 	background-position:50% 72%">
 				</div>
 
 				<!-- SLIDE OVERLAY -->
@@ -148,7 +148,8 @@
 						<i class="de-icon-menu"></i>
 					</div>
 
-					<ul id="nav-menu" class="nav-smooth-scroll">
+					<!-- Original Nav with all links -->
+					<!-- <ul id="nav-menu" class="nav-smooth-scroll">
 						<li class="first-child">
 							<a href="#main-slider">HOME</a>
 						</li>
@@ -169,6 +170,22 @@
 						</li>
 						<li>
 							<a href="#bridesmaid-section">BRIDESMAID</a>
+						</li>
+						<li>
+							<a href="#rsvp-section">RSVP</a>
+						</li>
+
+					</ul> -->
+
+					<ul id="nav-menu" class="nav-smooth-scroll" style="padding-right: 38px">
+						<li class="first-child">
+							<a href="#our-story">STORY</a>
+						</li>
+						<li>
+							<a href="#where-when">WHERE &amp; WHEN</a>
+						</li>
+						<li class="first-child" style="padding-left: 100px">
+							<a href="#gallery-section">GALLERY</a>
 						</li>
 						<li>
 							<a href="#rsvp-section">RSVP</a>
@@ -202,7 +219,7 @@
 						<div class="photo-item frame-border animation fadeInLeft">
 
 							<!--PHOTO-->
-							<img src="http://placehold.it/458x458" alt="" class="hover-animation image-zoom-in">
+							<img src="images/IMG_0313.jpeg" alt="" class="hover-animation image-zoom-in">
 
 							<!--PHOTO OVERLAY-->
 							<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -210,7 +227,7 @@
 							<!--END of PHOTO OVERLAY-->
 
 							<!--ICON LINK-->
-							<div class="layer wh100 hidden-link hover-animation delay1 fade-in">
+							<!-- <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
 								<div class="alignment">
 									<div class="v-align center-middle">
 
@@ -228,7 +245,7 @@
 
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<!--END of ICON LINK-->
 
 						</div>
@@ -258,7 +275,7 @@
 						<div class="photo-item frame-border animation fadeInRight">
 
 							<!--PHOTO-->
-							<img src="http://placehold.it/458x458" alt="" class="hover-animation image-zoom-in">
+							<img src="images/IMG_0310.jpeg" alt="" class="hover-animation image-zoom-in">
 
 							<!--PHOTO OVERLAY-->
 							<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -266,7 +283,7 @@
 							<!--END of PHOTO OVERLAY-->
 
 							<!--ICON LINK-->
-							<div class="layer wh100 hidden-link hover-animation delay1 fade-in">
+							<!-- <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
 								<div class="alignment">
 									<div class="v-align center-middle">
 
@@ -284,7 +301,7 @@
 
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<!--END of ICON LINK-->
 
 						</div>
@@ -309,7 +326,7 @@
 		<!-- PHOTO DIVIDER -->
 		<section id="photo-divider">
 			<div class="image-divider fixed-height"
-				style="background-image:url(http://placehold.it/1920x1080); height:600px"
+				style="background-image:url(images/knee.jpg); height:600px; background-position: 50% 50%"
 				data-stellar-background-ratio="0.3">
 			</div>
 		</section>
@@ -352,7 +369,7 @@
 						<div class="photo-item frame-border animation delay1 fadeInLeft">
 
 							<!--PHOTO-->
-							<img src="images/Alissa Pics/IMG_7600.jpeg" alt="" class="hover-animation image-zoom-in">
+							<img src="images/Alissa-Pics/IMG_7600.jpeg" alt="" class="hover-animation image-zoom-in">
 
 							<!--PHOTO OVERLAY-->
 							<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -364,12 +381,12 @@
 								<div class="alignment">
 									<div class="v-align center-middle">
 
-										<a href="http://placehold.it/500x750" class="magnific-zoom"
+										<!-- <a href="http://placehold.it/500x750" class="magnific-zoom"
 											title="LOVE AT FIRST SIGHT">
 											<div class="de-icon circle light medium-size inline">
 												<i class="de-icon-zoom-in"></i>
 											</div>
-										</a>
+										</a> -->
 
 									</div>
 								</div>
@@ -411,7 +428,7 @@
 						<div class="photo-item frame-border animation delay1 fadeInLeft">
 
 							<!--PHOTO-->
-							<img src="images/Alissa Pics/IMG_0333.jpg" alt="" class="hover-animation image-zoom-in">
+							<img src="images/Alissa-Pics/IMG_0333.jpg" alt="" class="hover-animation image-zoom-in">
 
 							<!--PHOTO OVERLAY-->
 							<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -423,12 +440,12 @@
 								<div class="alignment">
 									<div class="v-align center-middle">
 
-										<a href="http://placehold.it/700x467" class="magnific-zoom"
+										<!-- <a href="http://placehold.it/700x467" class="magnific-zoom"
 											title="Our First Dating">
 											<div class="de-icon circle light medium-size inline">
 												<i class="de-icon-zoom-in"></i>
 											</div>
-										</a>
+										</a> -->
 
 									</div>
 								</div>
@@ -482,11 +499,11 @@
 								<div class="alignment">
 									<div class="v-align center-middle">
 
-										<a href="http://placehold.it/700x394" class="magnific-zoom" title="He Proposed">
+										<!-- <a href="http://placehold.it/700x394" class="magnific-zoom" title="He Proposed">
 											<div class="de-icon circle light medium-size inline">
 												<i class="de-icon-zoom-in"></i>
 											</div>
-										</a>
+										</a> -->
 
 									</div>
 								</div>
@@ -541,11 +558,11 @@
 								<div class="alignment">
 									<div class="v-align center-middle">
 
-										<a href="http://placehold.it/700x467" class="magnific-zoom" title="Love Ring">
+										<!-- <a href="http://placehold.it/700x467" class="magnific-zoom" title="Love Ring">
 											<div class="de-icon circle light medium-size inline">
 												<i class="de-icon-zoom-in"></i>
 											</div>
-										</a>
+										</a> -->
 
 									</div>
 								</div>
@@ -670,11 +687,15 @@
 							<i class="de-icon-bell-alt"></i>
 						</div>
 
-						<h3 class="inline">ENGAGEMENT PARTY</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis
-							pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,
-							tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin
-							pulvinar congue</p>
+						<h3 class="inline">ENGAGEMENT PARTY LOCATION</h3>
+						<p>
+							Bears Nest Townhouse <br>
+							60 Earlshire Run <br>
+							Park Ridge, NJ 07656 <br>
+							<a href="https://www.google.com/maps/place/Bears+Nest+Townhouse/@41.04625,-74.0561,18z/data=!4m5!3m4!1s0x0:0xdb4aa9b9020e99bb!8m2!3d41.046189!4d-74.056135?hl=en-US"
+								target="_blank" style="color: #0000EE; text-decoration: underline;">View on Google
+								Maps</a>
+						</p>
 
 						<!-- <h3 class="inline">CEREMONY</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis
@@ -715,7 +736,7 @@
 		</section>
 
 		<section id="attending">
-			<div class="image-divider auto-height" style="background-image:url(http://placehold.it/1920x1080);"
+			<div class="image-divider auto-height" style="background-image:url(images/clubhouse.png);"
 				data-stellar-background-ratio="0.3">
 
 				<div class="divider-overlay"></div>
@@ -790,7 +811,7 @@
 						<div class="photo-item frame-border animation fadeIn">
 
 							<!--PHOTO-->
-							<img src="http://placehold.it/290x290" alt="" class="hover-animation image-zoom-rotate">
+							<img src="images/Alissa-Pics/IMG_0589.jpg" alt="" class="hover-animation image-zoom-rotate">
 
 							<!--PHOTO OVERLAY-->
 							<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -825,7 +846,7 @@
 						<div class="photo-item frame-border animation fadeIn">
 
 							<!--PHOTO-->
-							<img src="http://placehold.it/290x290" alt="" class="hover-animation image-zoom-rotate">
+							<img src="images/Alissa-Pics/IMG_1685.jpg" alt="" class="hover-animation image-zoom-rotate">
 
 							<!--PHOTO OVERLAY-->
 							<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -860,7 +881,7 @@
 						<div class="photo-item frame-border animation fadeIn">
 
 							<!--PHOTO-->
-							<img src="http://placehold.it/290x290" alt="" class="hover-animation image-zoom-rotate">
+							<img src="images/Alissa-Pics/IMG_1967.jpg" alt="" class="hover-animation image-zoom-rotate">
 
 							<!--PHOTO OVERLAY-->
 							<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -890,7 +911,7 @@
 					<!--END of GALLERY-ITEM-3-->
 
 					<!--GALLERY-ITEM-4-->
-					<div class="col-md-4">
+					<div class="col-md-4" style="display: none;">
 						<!--PHOTO-ITEM-->
 						<div class="photo-item frame-border animation fadeIn">
 
@@ -925,7 +946,7 @@
 					<!--END of GALLERY-ITEM-4-->
 
 					<!--GALLERY-ITEM-5-->
-					<div class="col-md-4">
+					<div class="col-md-4" style="display: none;">
 						<!--PHOTO-ITEM-->
 						<div class="photo-item frame-border animation fadeIn">
 
@@ -960,7 +981,7 @@
 					<!--END of GALLERY-ITEM-5-->
 
 					<!--GALLERY-ITEM-6-->
-					<div class="col-md-4">
+					<div class="col-md-4" style="display: none;">
 						<!--PHOTO-ITEM-->
 						<div class="photo-item frame-border animation fadeIn">
 
@@ -995,7 +1016,7 @@
 					<!--END of GALLERY-ITEM-6-->
 
 					<!--GALLERY-ITEM-7-->
-					<div class="col-md-4">
+					<div class="col-md-4" style="display: none;">
 						<!--PHOTO-ITEM-->
 						<div class="photo-item frame-border animation fadeIn">
 
@@ -1030,7 +1051,7 @@
 					<!--END of GALLERY-ITEM-7-->
 
 					<!--GALLERY-ITEM-8-->
-					<div class="col-md-4">
+					<div class="col-md-4" style="display: none;">
 						<!--PHOTO-ITEM-->
 						<div class="photo-item frame-border animation fadeIn">
 
@@ -1065,7 +1086,7 @@
 					<!--END of GALLERY-ITEM-8-->
 
 					<!--GALLERY-ITEM-9-->
-					<div class="col-md-4">
+					<div class="col-md-4" style="display: none;">
 						<!--PHOTO-ITEM-->
 						<div class="photo-item frame-border animation fadeIn">
 
@@ -1106,7 +1127,7 @@
 
 		<section id="dont-miss-it">
 			<div class="image-divider auto-height"
-				style="background-image:url(images/clubhouse.png); background-position: 10%"
+				style="background-image:url(images/standing.jpg); background-position: 10%"
 				data-stellar-background-ratio="0.3">
 
 				<div class="container">
@@ -1140,7 +1161,7 @@
 		</section>
 
 		<!-- MORE EVENTS SECTION -->
-		<section id="more-events">
+		<section id="more-events" style="display: none;">
 
 			<div class="container">
 
@@ -1343,7 +1364,7 @@
 		</section>
 
 		<!-- PHOTO DIVIDER -->
-		<section id="photo-divider-2">
+		<section id="photo-divider-2" style="display: none">
 			<div class="image-divider fixed-height"
 				style="background-image:url(http://placehold.it/1920x1080); height:450px"
 				data-stellar-background-ratio="0.3">
@@ -1351,7 +1372,7 @@
 		</section>
 
 		<!-- GROOMSMEN SECTION -->
-		<section id="groomsmen-section">
+		<section id="groomsmen-section" style="display: none;">
 
 			<div class="container">
 
@@ -1699,7 +1720,7 @@
 		</section>
 
 		<!-- PHOTO DIVIDER -->
-		<section id="photo-divider-3">
+		<section id="photo-divider-3" style="display: none;">
 			<div class="image-divider fixed-height"
 				style="background-image:url(http://placehold.it/1920x1080); height:450px"
 				data-stellar-background-ratio="0.3">
@@ -1707,7 +1728,7 @@
 		</section>
 
 		<!-- BRIDESMAID SECTION -->
-		<section id="bridesmaid-section">
+		<section id="bridesmaid-section" style="display: none;">
 
 			<div class="container">
 
@@ -2056,7 +2077,7 @@
 		</section>
 
 		<!-- GIFT REGISTRY SECTION -->
-		<section id="gift-section">
+		<section id="gift-section" style="display: none;">
 
 			<div class="container">
 
@@ -2147,12 +2168,14 @@
 									data-required="Email Required" data-output-label="Output Email">
 							</div>
 							<div id="events" class="form-group">
-								<label for="inputevents">*I WILL ATTEND TO</label>
+								<label for="inputevents">*WILL YOU ATTEND?</label>
 								<select multiple id="inputevents" class="form-control ajax-input"
 									data-required="Please Select Events" data-output-label="Output Events">
-									<option>Wedding Day</option>
+									<!-- <option>Wedding Day</option>
 									<option>Ceremony Day</option>
-									<option>The Party</option>
+									<option>The Party</option> -->
+									<option>I'll be there!</option>
+									<option>I won't be able to make it.</option>
 								</select>
 							</div>
 						</div>
@@ -2184,7 +2207,8 @@
 
 	<!-- FOOTER SECTION -->
 	<footer>
-		<div class="image-divider fixed-height" style="background-image:url(http://placehold.it/1920x1080);"
+		<div class="image-divider fixed-height"
+			style="background-image:url(images/footer.jpg); background-position: 50% 100%"
 			data-stellar-background-ratio="0.5">
 
 			<div class="divider-overlay"></div>
@@ -2212,7 +2236,7 @@
 								</div>
 
 								<div id="footer-couple-name" class="animation delay1 fadeInUp">
-									GERRARD & DIANNE
+									AREK & ALISSA
 								</div>
 
 							</div>
