added new images and finishing touches

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									You're Invited
 								</div>
 								<div class="banner-text withlove medium light">
-									<h1>WE'RE CELEBRATING OUR ENGAGMENT</h1>
+									<h1>WE'RE CELEBRATING OUR ENGAGEMENT</h1>
 								</div>
 								<div id="banner-date">
 									- OCTOBER / 9TH / 2021 -
@@ -260,12 +260,12 @@
 							</div>
 						</div>
 
-						<p class="blurb animation fadeInLeft text-center">
+						<!-- <p class="blurb animation fadeInLeft text-center">
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante
 							quis pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,
 							tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin
 							pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.
-						</p>
+						</p> -->
 
 					</div>
 
@@ -311,12 +311,12 @@
 							<h2 class="text-center">ALISSA<span class="last-name">-&nbsp;Bonjuklian&nbsp;-</span></h2>
 						</div>
 
-						<p class="blurb animation fadeInRight text-center">
+						<!-- <p class="blurb animation fadeInRight text-center">
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante
 							quis pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,
 							tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin
 							pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.
-						</p>
+						</p> -->
 
 					</div>
 				</div>
@@ -326,7 +326,7 @@
 		<!-- PHOTO DIVIDER -->
 		<section id="photo-divider">
 			<div class="image-divider fixed-height"
-				style="background-image:url(images/knee.jpg); height:600px; background-position: 50% 50%"
+				style="background-image:url(images/knee.jpg); height:800px; background-position: center;"
 				data-stellar-background-ratio="0.3">
 			</div>
 		</section>
@@ -348,12 +348,12 @@
 								OUR <img src="images/heart-icon.png" alt=""> STORY
 							</h2>
 
-							<p>
+							<!-- <p>
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante
 								quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor
 								fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit
 								faucibus. Proin pulvinar congue ex, vitae
-							</p>
+							</p> -->
 
 
 						</div>
@@ -400,8 +400,8 @@
 					<div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
 						<div class="arrow-left"></div>
 						<div class="story-date">
-							<div class="date-only">23</div>
-							<div class="month-year">03.12</div>
+							<!-- <div class="date-only">23</div>
+							<div class="month-year">03.12</div> -->
 						</div>
 						<div class="arrow-right"></div>
 						<div class="clearboth"></div>
@@ -409,10 +409,16 @@
 
 					<div class="col-sm-12 col-md-4 animation delay1 fadeInRight">
 						<h3>LOVE AT FIRST SIGHT</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis
-							pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,
-							tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin
-							pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
+						<p>October 2017: Sometimes our friends truly know us best! Mutual friend Shant Massoyan played
+							his hand at
+							matchmaker, a year before we serendipitously met in person!
+							<br><br>
+							November 2018: Alissa was visiting her friend who happened to live in the apartment across
+							the hall from Arek, who wandered across the hall to say hello. When we realized who the
+							other
+							person was, we shared a laugh about it and had to snap a photo to send to Shant: "Look who I
+							just ran into!" We started dating about 2 months later, and the rest is history!
+						</p>
 					</div>
 
 					<div class="vertical-line">
@@ -428,7 +434,7 @@
 						<div class="photo-item frame-border animation delay1 fadeInLeft">
 
 							<!--PHOTO-->
-							<img src="images/Alissa-Pics/IMG_0333.jpg" alt="" class="hover-animation image-zoom-in">
+							<img src="images/unnamed-1.jpg" alt="" class="hover-animation image-zoom-in">
 
 							<!--PHOTO OVERLAY-->
 							<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -459,8 +465,8 @@
 					<div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
 						<div class="arrow-left"></div>
 						<div class="story-date">
-							<div class="date-only">19</div>
-							<div class="month-year">06.12</div>
+							<!-- <div class="date-only">19</div>
+							<div class="month-year">06.12</div> -->
 						</div>
 						<div class="arrow-right"></div>
 						<div class="clearboth"></div>
@@ -468,10 +474,9 @@
 
 					<div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
 						<h3>OUR FIRST DATE</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis
-							pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,
-							tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin
-							pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
+						<p>December 2018: After a full afternoon of gallery-hopping and wandering the streets of SoHo in
+							search of perfect gifts for our friends, family, and each other, we found a cute Thai
+							restaurant on Spring Street for dinner & cocktails as a nightcap.</p>
 					</div>
 
 					<div class="vertical-line">
@@ -517,8 +522,8 @@
 					<div class="col-md-2 text-center story-date-wrapper animation fadeIn">
 						<div class="arrow-left"></div>
 						<div class="story-date">
-							<div class="date-only">12</div>
-							<div class="month-year">09.14</div>
+							<!-- <div class="date-only">12</div>
+							<div class="month-year">09.14</div> -->
 						</div>
 						<div class="arrow-right"></div>
 						<div class="clearboth"></div>
@@ -526,10 +531,12 @@
 
 					<div class="col-md-4 animation delay1 fadeInRight">
 						<h3>HE PROPOSED</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis
-							pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,
-							tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin
-							pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
+						<p>May 2021: Arek felt Brooklyn Bridge Park was an ideal location for the proposal as it
+							signified our love for the city of NY as well as for Brooklyn, our home for several years.
+							The stunning view of the East River, the iconic Brooklyn Bridge, and the Lower Manhattan
+							skyline made for a perfect backdrop for the magical moment. Alissa says as much as she
+							always pictured that moment, nothing compared to the actual moment Arek dropped down to one
+							knee! </p>
 
 					</div>
 
@@ -576,19 +583,21 @@
 					<div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
 						<div class="arrow-left"></div>
 						<div class="story-date">
-							<div class="date-only">19</div>
-							<div class="month-year">10.14</div>
+							<!-- <div class="date-only">19</div>
+							<div class="month-year">10.14</div> -->
 						</div>
 						<div class="arrow-right"></div>
 						<div class="clearboth"></div>
 					</div>
 
 					<div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
-						<h3>LOVE RING</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis
-							pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,
-							tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin
-							pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
+						<h3>THE RING</h3>
+						<p>The engagement ring is particularly sentimental, as the center stone belonged to Alissa's
+							maternal grandmother Almast, or "Alice," who we commemorate and wish were with us today to
+							celebrate. Almast is coincidentally yet interestingly the Armenian word for diamond. The
+							setting was a custom nature-inspired design as Alissa is a novice hiker and huge fan of the
+							great outdoors. Specifically, the setting is modeled after two wisteria vines intertwined -
+							symbolic of how our lives have become inseparable.</p>
 					</div>
 
 					<div class="vertical-line">
@@ -617,7 +626,7 @@
 		<!-- PHOTO DIVIDER -->
 		<section id="photo-divider-1">
 			<div class="image-divider fixed-height"
-				style="background-image:url(images/JPEG/IMG_9635.jpg); background-position: 50% 70%; height:500px;"
+				style="background-image:url(images/JPEG/IMG_9635.jpg); background-position: 90% 70%; height:500px;"
 				data-stellar-background-ratio="0.3">
 			</div>
 		</section>
@@ -790,12 +799,12 @@
 								OUR <img src="images/heart-icon.png" alt=""> GALLERY
 							</h2>
 
-							<p>
+							<!-- <p>
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante
 								quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor
 								fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit
 								faucibus. Proin pulvinar congue ex, vitae
-							</p>
+							</p> -->
 
 
 						</div>
@@ -811,7 +820,7 @@
 						<div class="photo-item frame-border animation fadeIn">
 
 							<!--PHOTO-->
-							<img src="images/Alissa-Pics/IMG_0589.jpg" alt="" class="hover-animation image-zoom-rotate">
+							<img src="images/unnamed-15.jpg" alt="" class="hover-animation image-zoom-rotate">
 
 							<!--PHOTO OVERLAY-->
 							<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -821,7 +830,7 @@
 							<!--ICON LINK-->
 							<div class="layer wh100 hidden-link hover-animation delay1 fade-in">
 								<div class="alignment">
-									<div class="v-align center-middle">
+									<!-- <div class="v-align center-middle">
 
 										<a href="http://placehold.it/500x750" class="magnific-zoom-gallery"
 											title="Attachment-1">
@@ -830,7 +839,7 @@
 											</div>
 										</a>
 
-									</div>
+									</div> -->
 								</div>
 							</div>
 							<!--END of ICON LINK-->
@@ -846,7 +855,7 @@
 						<div class="photo-item frame-border animation fadeIn">
 
 							<!--PHOTO-->
-							<img src="images/Alissa-Pics/IMG_1685.jpg" alt="" class="hover-animation image-zoom-rotate">
+							<img src="images/unnamed-4.jpg" alt="" class="hover-animation image-zoom-rotate">
 
 							<!--PHOTO OVERLAY-->
 							<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -856,7 +865,7 @@
 							<!--ICON LINK-->
 							<div class="layer wh100 hidden-link hover-animation delay1 fade-in">
 								<div class="alignment">
-									<div class="v-align center-middle">
+									<!-- <div class="v-align center-middle">
 
 										<a href="http://placehold.it/700x394" class="magnific-zoom-gallery"
 											title="Attachment-2">
@@ -865,7 +874,7 @@
 											</div>
 										</a>
 
-									</div>
+									</div> -->
 								</div>
 							</div>
 							<!--END of ICON LINK-->
@@ -891,7 +900,7 @@
 							<!--ICON LINK-->
 							<div class="layer wh100 hidden-link hover-animation delay1 fade-in">
 								<div class="alignment">
-									<div class="v-align center-middle">
+									<!-- <div class="v-align center-middle">
 
 										<a href="http://placehold.it/700x467" class="magnific-zoom-gallery"
 											title="Attachment-3">
@@ -900,7 +909,7 @@
 											</div>
 										</a>
 
-									</div>
+									</div> -->
 								</div>
 							</div>
 							<!--END of ICON LINK-->
