--- a/index.html
+++ b/index.html
@@ -455,13 +455,13 @@
 					</div>
 
 					<div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
-						<div class="arrow-left"></div>
+						<!-- <div class="arrow-left"></div>
 						<div class="story-date">
-							<!-- <div class="date-only">23</div>
-							<div class="month-year">03.12</div> -->
+							<div class="date-only">23</div>
+							<div class="month-year">03.12</div>
 						</div>
 						<div class="arrow-right"></div>
-						<div class="clearboth"></div>
+						<div class="clearboth"></div> -->
 					</div>
 
 					<div class="col-sm-12 col-md-4 animation delay1 fadeInRight">
@@ -520,13 +520,13 @@
 					</div>
 
 					<div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
-						<div class="arrow-left"></div>
+						<!-- <div class="arrow-left"></div>
 						<div class="story-date">
-							<!-- <div class="date-only">19</div>
-							<div class="month-year">06.12</div> -->
+							<div class="date-only">19</div>
+							<div class="month-year">06.12</div>
 						</div>
 						<div class="arrow-right"></div>
-						<div class="clearboth"></div>
+						<div class="clearboth"></div> -->
 					</div>
 
 					<div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
@@ -577,13 +577,13 @@
 					</div>
 
 					<div class="col-md-2 text-center story-date-wrapper animation fadeIn">
-						<div class="arrow-left"></div>
+						<!-- <div class="arrow-left"></div>
 						<div class="story-date">
-							<!-- <div class="date-only">12</div>
-							<div class="month-year">09.14</div> -->
+							<div class="date-only">12</div>
+							<div class="month-year">09.14</div>
 						</div>
 						<div class="arrow-right"></div>
-						<div class="clearboth"></div>
+						<div class="clearboth"></div> -->
 					</div>
 
 					<div class="col-md-4 animation delay1 fadeInRight">
@@ -638,13 +638,13 @@
 					</div>
 
 					<div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
-						<div class="arrow-left"></div>
+						<!-- <div class="arrow-left"></div>
 						<div class="story-date">
-							<!-- <div class="date-only">19</div>
-							<div class="month-year">10.14</div> -->
+							<div class="date-only">19</div>
+							<div class="month-year">10.14</div>
 						</div>
 						<div class="arrow-right"></div>
-						<div class="clearboth"></div>
+						<div class="clearboth"></div> -->
 					</div>
 
 					<div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
@@ -754,9 +754,7 @@
 
 				<!-- ROW-3 -->
 				<div class="row">
-					<div class="col-md-6 animation fadeIn">
-
-
+					<div class="col-md-6 animation fadeIn" id="location-info">
 
 						<!-- <h3 class="inline">ENGAGEMENT PARTY LOCATION</h3>
 						<p>
@@ -816,7 +814,7 @@
 					</div>
 
 
-					<div class="col-md-6 animation fadeIn">
+					<div class="col-md-6 animation fadeIn" id="map-container">
 						<div id="map-canvas" style="border:15px solid #FFF; margin-top:20px;"></div>
 						<!-- <iframe src="https://www.google.com/maps/d/embed?mid=1ggGmDTvrD8PsRFTZkS831fefQE89fpLn&ehbc=2E312F" width="640" height="480"></iframe> -->
 					</div>
