--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 							<a href="#gallery-section">GALLERY</a>
 						</li>
 						<li>
-							<a href="#rsvp-section">RSVP</a>
+							<a href="#gift-section">REGISTRY</a>
 						</li>
 
 					</ul>
@@ -787,7 +787,7 @@
 						</div>
 							<h4 class="inline">RECEPTION</h4>
 							<h4>Location: Palisadium, USA </h4>
-							<h4>Address: 700 Palisadium Dr #3239, Fort Lee, NJ 07024</h4>
+							<h4>Address: 700 Palisadium Dr, Cliffside Park, NJ 07010</h4>
 							<h4>Time: 6:30pm</h4>
 							<h4><a href='https://goo.gl/maps/d6EJvbAzx6escQpr8' target='_blank' class="custom-link-style">Get Directions</a></h4>
 							<hr class="custom-hr">
@@ -805,6 +805,18 @@
 						<h4>Address: 10 The Promenade, Edgewater, NJ 07020</h4>
 						<h4>Phone: (201) 941-4700</h4>
 						<h4><a href='https://goo.gl/maps/o6y9NWvbZYkUDYqZ9' target='_blank' class="custom-link-style">Get Directions</a></h4>
+						<p>If you plan to attend and stay at the hotel, we highly recommend you reserve your room ASAP.  
+							As the hotel only releases 5 rooms for our block at a time, reserving early will not just help ensure you enjoy the discounted rate, 
+							but will also help ensure that as many of our friends and family stay together at the same hotel.
+							<br><br>
+							<strong>3 ways to book your room:</strong></p>
+						<ul>
+							<li>(1) <a href="https://www.my-event.hilton.com/ewrewhw-bcw-d518e0fe-1541-4073-ad55-fd618e4e3d0a/" style="color: blue; text-decoration: underline;">Click here to use our unique link for reservations</a></li>
+							<li>(2) Visit <a href="www.hilton.com" style="color: blue; text-decoration: underline;">hilton.com</a> and with the three-letter code: <strong>BCW</strong>.</li>
+							<li>(3) Call the hotel at 201-941-4700 and mention booking with the Bonjuklian-Chatmajian wedding.</li>
+						</ul>
+							
+							
 
 						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis
 							pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,
@@ -838,7 +850,7 @@
 
 
 							<div class="banner-text withlove large light animation fadeInUp">
-								<h2 class="h1">ARE YOU ATTENDING?</h2>
+								<h2 class="h1">LOOKING FOR OUR REGISTRY?</h2>
 							</div>
 
 
@@ -851,9 +863,9 @@
 							</div> -->
 
 							<div class="text-center">
-								<a href="#rsvp-section"
+								<a href="#gift-section"
 									class="smooth-scroll de-button outline medium animation fadeInUp">
-									RSVP
+									GO TO REGISTRY
 								</a>
 							</div>
 
@@ -2189,7 +2201,7 @@
 		</section>
 
 		<!-- GIFT REGISTRY SECTION -->
-		<section id="gift-section" style="display: none;">
+		<section id="gift-section">
 
 			<div class="container">
 
@@ -2204,12 +2216,15 @@
 								GIFT REGISTRY
 							</h2>
 
-							<p>
+							<div class="iframely-embed"><div class="iframely-responsive" style="padding-bottom: 57.875%; padding-top: 120px;"><a href="http://registry.theknot.com/alissa-bonjuklian-arek-chatmajian-september-2022-ny/46449897" data-iframely-url="//iframely.net/8KBF21A"></a></div></div><script async src="//iframely.net/embed.js" charset="utf-8"></script>
+
+
+							<!-- <p>
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante
 								quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor
 								fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit
 								faucibus. Proin pulvinar congue ex, vitae
-							</p>
+							</p> -->
 
 
 						</div>
@@ -2234,7 +2249,7 @@
 		</section>
 
 		<!-- RSVP SECTION -->
-		<section id="rsvp-section">
+		<section id="rsvp-section" style="display: none;">
 
 			<div class="container">
 
