added attire text and changed main theme color

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 			background-image: url("optimized-images/01-main-hero.jpg");
 			background-repeat: no-repeat;
 			background-position: center;
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+ 			-o-background-size: cover;
 			background-size: cover;
 			height: 800px;
 			/* width: 600px; */
@@ -80,6 +83,15 @@
 			.countdown-circles {
 				margin-top: -70%;
 			}
+
+			#hero-pic {
+				background-image: url("optimized-images/01-main-hero-mobile.jpg");
+				background-repeat: no-repeat;
+				background-position: left 30%;
+				background-size: cover;
+				/* height: 500px; */
+				/* width: 600px; */
+			}			
 
 			#knee-pic {
 				background-color: #F6F6F6;
@@ -404,7 +416,7 @@
 
 						<div class="section-title animation fadeInUp">
 							<h2>
-								OUR <img src="optimized-images/heart-icon.png" alt=""> STORY
+								OUR STORY
 							</h2>
 
 							<!-- <p>
@@ -792,6 +804,8 @@
 							<h4>Address: 700 Palisadium Dr, Cliffside Park, NJ 07010</h4>
 							<h4>Time: 6:30pm</h4>
 							<h4><a href='https://goo.gl/maps/d6EJvbAzx6escQpr8' target='_blank' class="custom-link-style">Get Directions</a></h4>
+							<p>Attire suggestions: To honor this cosmic union, guests are encouraged, though <strong>NOT</strong> required, to incorporate a "celestial" aesthetic such as  blues, purples, metallics, and sparkle!</p>
+							<p>Our reception will be "festive formal", which is slightly less formal than “black tie". This means tuxedos or suits are appropriate for men. For women long or short dresses; sequins, glitter, and bright/flashy colors or patterns are encouraged.</p>
 							<hr class="custom-hr">
 
 							<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis
@@ -894,7 +908,7 @@
 
 						<div class="section-title animation fadeInUp">
 							<h2>
-								OUR <img src="optimized-images/heart-icon.png" alt=""> GALLERY
+								OUR GALLERY
 							</h2>
 
 							<!-- <p>
